--- a/public/fonts/pretendard.css
+++ b/public/fonts/pretendard.css
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Pretendard";
   font-weight: 900;
-  font-display: swap;
+  font-display: optional;
   src: local("Pretendard Black"),
     url("./woff2/Pretendard-Black.woff2") format("woff2");
 }
@@ -9,7 +9,7 @@
 @font-face {
   font-family: "Pretendard";
   font-weight: 800;
-  font-display: swap;
+  font-display: optional;
   src: local("Pretendard ExtraBold"),
     url("./woff2/Pretendard-ExtraBold.woff2") format("woff2");
 }
@@ -17,7 +17,7 @@
 @font-face {
   font-family: "Pretendard";
   font-weight: 700;
-  font-display: swap;
+  font-display: optional;
   src: local("Pretendard Bold"),
     url("./woff2/Pretendard-Bold.woff2") format("woff2");
 }
@@ -25,7 +25,7 @@
 @font-face {
   font-family: "Pretendard";
   font-weight: 600;
-  font-display: swap;
+  font-display: optional;
   src: local("Pretendard SemiBold"),
     url("./woff2/Pretendard-SemiBold.woff2") format("woff2");
 }
@@ -33,7 +33,7 @@
 @font-face {
   font-family: "Pretendard";
   font-weight: 500;
-  font-display: swap;
+  font-display: optional;
   src: local("Pretendard Medium"),
     url("./woff2/Pretendard-Medium.woff2") format("woff2");
 }
@@ -41,7 +41,7 @@
 @font-face {
   font-family: "Pretendard";
   font-weight: 400;
-  font-display: swap;
+  font-display: optional;
   src: local("Pretendard Regular"),
     url("./woff2/Pretendard-Regular.woff2") format("woff2");
 }
@@ -49,7 +49,7 @@
 @font-face {
   font-family: "Pretendard";
   font-weight: 300;
-  font-display: swap;
+  font-display: optional;
   src: local("Pretendard Light"),
     url("./woff2/Pretendard-Light.woff2") format("woff2");
 }
@@ -57,7 +57,7 @@
 @font-face {
   font-family: "Pretendard";
   font-weight: 200;
-  font-display: swap;
+  font-display: optional;
   src: local("Pretendard ExtraLight"),
     url("./woff2/Pretendard-ExtraLight.woff2") format("woff2");
 }
@@ -65,7 +65,7 @@
 @font-face {
   font-family: "Pretendard";
   font-weight: 100;
-  font-display: swap;
+  font-display: optional;
   src: local("Pretendard Thin"),
     url("./woff2/Pretendard-Thin.woff2") format("woff2");
 }
