--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,3 +5,15 @@
   font-family: Pretendard;
   font-size: 10px;
 }
+
+ul {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+input:focus {
+  outline: none;
+}
